--- a/cart/cart.css
+++ b/cart/cart.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?Roboto:300,400,700');
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400&display=swap');
 :root {
     --blue: #3c6382;
@@ -14,6 +12,7 @@
     text-decoration: none;
     outline: none;
     border: none;
+    font-family: 'Poppins', sans-serif;
     /* text-transform: capitalize; */
     transition: all .3s cubic-bezier(.38, 1.15, .7, 1.12);
 }
@@ -23,18 +22,19 @@
     color: #fff;
 }
 
-
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     min-height: 100%;
     overflow-x: hidden;
 }
- /* html {
+
+
+/* html {
     font-size: 62.5%;
     overflow-x: hidden;
 } 
-
 section {
     min-height: 100vh;
     padding: 1rem 9%;
@@ -51,7 +51,7 @@ section {
 }
 
 header {
-    font-family: sans-serif ;
+    font-family: 'Poppins', 'sans-serif';
     width: 100%;
     display: flex;
     align-items: center;
@@ -99,21 +99,13 @@ header.sticky {
     display: none;
 }
 
-
-/* * {
-    box-sizing: border-box;
-    font-family: 'Roboto';
-    color: #777;
-}
-
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     min-height: 100%;
     overflow-x: hidden;
-} */
-
-
+}
 
 .content-section {
     margin: 1em;
@@ -121,19 +113,17 @@ html, body {
 
 .container {
     /* max-width: 900px; */
-    margin-top: 80px;
-    padding: 0 1.5em; 
+    margin: 0 auto;
+    padding: 0 1.5em;
 }
 
 .section-header {
-    font-family: "Roboto";
-    font-weight:bold;
+    font-family: "Poppins";
+    font-weight: bold;
     color: #333;
     text-align: center;
     font-size: 2.5em;
 }
-
-
 
 .btn {
     text-align: center;
@@ -142,42 +132,40 @@ html, body {
     cursor: pointer;
 }
 
-
-
 .btn-primary {
     color: white;
-    background-color: #44bdf5;
+    background-color: #082d48;
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
 .btn-primary:hover {
-    background-color:  var(--dark-blue);
+    background-color: #3c6382;
 }
 
-.shop-items{
-    padding:20px;
+.shop-items {
+    padding: 20px;
     display: flex;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     justify-content: space-between;
-    margin:auto;
+    margin: auto;
     background-color: rgba(148, 220, 241, 0.1);
 }
 
 .shop-items .shop-item {
-    width: 360px;
-    height: 440px;
-    margin-bottom: 70px;
+    width: 340px;
+    height: 420px;
+    margin-bottom: 30px;
     background: #fff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 3px;
     text-align: center;
 }
 
-.shop-items .shop-item:hover{
+.shop-items .shop-item:hover {
     border-radius: 5px;
-    box-shadow:0 5px 15px rgba(0, 0, 0, 0.8);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8);
 }
 
 .shop-item-title {
@@ -192,7 +180,7 @@ html, body {
 }
 
 .shop-item-image {
-    height: 250px;
+    height: 150px;
 }
 
 .shop-item-details {
@@ -214,8 +202,8 @@ html, body {
     justify-content: space-around;
 }
 
-.cart{
-    max-width:900px;
+.cart {
+    max-width: 900px;
     margin: 0 auto;
     padding: 0 1.5em;
 }
@@ -256,11 +244,11 @@ html, body {
 .cart-item-title {
     color: #333;
     margin-left: .5em;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 
 .cart-item-image {
-    width: 75px;
+    width: 65px;
     height: auto;
     border-radius: 10px;
 }
@@ -278,8 +266,8 @@ html, body {
 }
 
 .cart-quantity-input {
-    height: 34px;
-    width: 50px;
+    height: 24px;
+    width: 30px;
     border-radius: 5px;
     border: 1px solid #56CCF2;
     background-color: #eee;
@@ -318,39 +306,6 @@ html, body {
 
 .btn-purchase {
     display: block;
-    margin: 40px auto 80px auto;
-    font-size: 1.75em;
-}
-
-
-/* media queries  */
-
-@media (max-width:991px) {
-    #menu {
-        display: block;
-    }
-    header .navbar {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background: #fff;
-        padding: 2rem;
-        border-top: .1rem solid rgba(0, 0, 0, .1);
-        transform-origin: top;
-        transform: scaleY(0);
-        opacity: 0;
-    }
-    header .navbar.nav-toggle {
-        transform: scaleY(1);
-        opacity: 1;
-    }
-    header .navbar a {
-        display: block;
-        margin: 1.5rem 0;
-        font-size: 2rem;
-    }
-    /* .fa-times {
-        transform: rotate(180deg);
-    } */
+    margin: 30px auto 70px auto;
+    font-size: 1.3em;
 }
